--- a/SidePanel.html
+++ b/SidePanel.html
@@ -2,7 +2,9 @@
 
 <head>
 	<title>Meet add-on Side Panel</title>
-	<script src="./main.js"></script>
+	<script src="./assets/main.js"></script>
+	<link rel="copy-file" href="assets/logo.svg" data-trunk>
+	<link rel="copy-file" href="assets/main.js" data-trunk>
 </head>
 
 <body style="width: 100%; height: 100%; margin: 0">
