--- a/SidePanel.html
+++ b/SidePanel.html
@@ -6,8 +6,15 @@
 	<script src="./main.js"></script>
 	<link rel="copy-file" href="assets/logo.svg" data-trunk>
 	<link rel="copy-file" href="assets/main.js" data-trunk>
+
+	<script>
+		document.body.onload = () => {
+			parkinglot.setUpAddon();
+		};
+	</script>
 </head>
 
-<body></body>
+<body>
+</body>
 
 </html>
