--- a/SidePanel.html
+++ b/SidePanel.html
@@ -3,18 +3,13 @@
 
 <head>
 	<title>Parking Lot</title>
-	<script src="./main.js"></script>
-	<link rel="copy-file" href="assets/logo.svg" data-trunk>
-	<link rel="copy-file" href="assets/main.js" data-trunk>
-
 </head>
 
 <body>
-	<script>
-		document.body.onload = () => {
-			parkinglot.setUpAddon();
-		};
-	</script>
+	<noscript>You need to enable JavaScript to run this app.</noscript>
+	<div id="root"></div>
+
+	<script src="./src/index.tsx" type="module"></script>
 </body>
 
 
